syntax = "proto3";
package kratos.api;

option go_package = "Librarian/internal/conf;conf";

import "google/protobuf/duration.proto";

message Config {
  EnableServiceDiscovery enable_service_discovery = 10;

  SephirahServer server = 1;
  Database database = 2;
  S3 s3 = 3;
  Auth auth = 4;
  MQ mq = 5;
  Cache cache = 6;
  Porter porter = 7;
  Consul consul = 8;
  Search search = 11;
  OTLP otlp = 14;

  Miner miner = 13;
}

message SephirahServer {
  message Info {
    string name = 1;
    string description = 2;
    string website_url = 3;
    string logo_url = 4;
    string background_url = 5;
  }
  GRPC grpc = 1;
  GRPC grpc_web = 2;
  Info info = 3;
}

message Miner {
  message Server {
    GRPC grpc = 1;
  }

  message Data {
    message OCR {
      string address = 1;
    }
    OCR ocr = 1;
  }
  Server server = 1;
  Data data = 2;
  Consul consul = 3;
}

message Porter {
  repeated string address = 1;
  repeated string trusted = 2;
}

message EnableServiceDiscovery {
  bool porter = 1;
  bool miner = 2;
}

message GRPC {
  string network = 1;
  string addr = 2;
  google.protobuf.Duration timeout = 3;
}

message Database {
  string driver = 1;
  string host = 2;
  int32 port = 3;
  string dbname = 4;
  string user = 5;
  string password = 6;
  bool no_ssl = 7;
}

message S3 {
  string driver = 1;
  string end_point = 2;
  string access_key = 3;
  string secret_key = 4;
  bool use_ssl = 5;
}

message MQ {
  string driver = 1;
}

message Auth {
  string password_salt = 1;
  string jwt_issuer = 2;
  string jwt_secret = 3;
}

message Cache {
  string driver = 1;
  string addr = 2;
  int64 db = 3;
  string user = 4;
  string password = 5;
}

message Consul {
  string addr = 1;
  string token = 2;
}

message OTLP {
  string protocol = 1;
  string endpoint = 2;
  string headers = 3;
  bool grpc_insecure = 4;
}

message Search {
  string driver = 1;
  message MeiliSearch {
    string addr = 1;
    string api_key = 2;
  }
  optional MeiliSearch meili = 2;
}